# Emu

./: .gitignore  .gitmodules  AGENTS.MD  CONTEXT_CHAIN.md  COWORKER_MODE_SPEC.md  DOCUMENTATION.md  FRONTEND_REDESIGN.md  HARNESS_IMPROVEMENTS.md  LEARNINGS.md  MACOS_PERMISSIONS.md  PIXEL_ISSUE_COWORKERMODE.TODO.MD  README.md  RESEARCH_OPENCLAW_VS_EMU.md  SETUP-COWORKER-CUA.md  SETUP.md  TERMINAL.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  _find_sessions.ps1  backend.sh  frontend.sh  main.js  package-lock.json  package.json  preload.js
backend/: .env.example  BACKEND.md  MODAL.MD  OMNIPARSER.md  main.py  modal_client.py  modal_health.py  pyproject.toml  sglang_qwen35_vlm.py  test.py
backend/context_manager/: __init__.py  action_validator.py  context.py
backend/coworker/: config.py  routing.py
backend/models/: __init__.py  actions.py  request.py  response.py
backend/prompts/: __init__.py  bootstrap_prompt.py  compact_prompt.py  coworker_system_prompt.py  daemon.md  hermes_setup_prompt.py  plan_prompt.py  system_prompt.py
backend/providers/: __init__.py  agent_tools.py  registry.py
backend/skills/: __init__.py  loader.py
backend/tests/: test_action_validator.py
backend/tools/: __init__.py  compaction.py  coworker_tools.py  dispatcher.py  handlers.py  hermes.py  hermes_jobs.py  raise_app.py  shell.py
backend/utilities/: __init__.py  action_errors.py  connection.py  logger.py  paths.py
backend/workspace/: __init__.py  reader.py
terminal/: __init__.py  __main__.py  agent_loop.py  app.py  app.tcss  client.py  config.py  executor.py  pyproject.toml  screenshot.py
training/: .env.example  buffer.py  dataset.py  harness.py  pyproject.toml  synth.py
(+208 files in other folders)
