[project]
name = "backend"
version = "0.1.0"
description = "Emulation Agent FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.52.0",
    "fastapi>=0.135.1",
    "google-genai>=1.51.0",
    "modal>=1.3.5",
    "openai>=2.0.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.41.0",
]
