[project]
name = "emu-terminal"
version = "0.1.0"
description = "Terminal UI frontend for the Emu computer-use agent"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pillow>=12.1.1",
    "aiohttp>=3.13.0",
    "click>=8.0.0",
]

[project.scripts]
emu-tui = "terminal.__main__:main"
